Fix bug where validation error message overlapped checkbox label (#186)

--- a/src/app/validation/error-message/error-message.component.scss
+++ b/src/app/validation/error-message/error-message.component.scss
@@ -9,7 +9,7 @@ div.invalid {
   opacity: $error-opacity;
 }
 
-input + label + :host,
+input:not([type="checkbox"]) + label + :host,
 mz-select-container :host,
 textarea + label + :host {
 
